force-app/main/default/objects/CventEvents__Log__c/CventEvents__Log__c.object-meta.xml
<CustomObject>
    <description>Cvent app logging object.</description>
    <label>Cvent Log</label>
    <nameField>
        <displayFormat>L-{00000000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cvent Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>