force-app/main/default/objects/CventEvents__Log__c/fields/CventEvents__Code__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__Code__c</fullName>
    <description>Unique programmatic identifier for the event, use for filtering, workflows, etc.</description>
    <inlineHelpText>Unique programmatic identifier for the event, use for filtering, workflows, etc.</inlineHelpText>
    <label>Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>