force-app/main/default/objects/CventEvents__Log__c/fields/CventEvents__Detail__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__Detail__c</fullName>
    <description>Detail such as stack trace, should be in JSON format whenever possible.</description>
    <inlineHelpText>Detail such as stack trace, should be in JSON format whenever possible.</inlineHelpText>
    <label>Detail</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>