force-app/main/default/objects/CventEvents__Log__c/fields/CventEvents__LogDate__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__LogDate__c</fullName>
    <defaultValue>Now()</defaultValue>
    <description>Date and time of the event.</description>
    <inlineHelpText>Date and time of the event.</inlineHelpText>
    <label>Log Date</label>
    <type>DateTime</type>
</CustomField>