force-app/main/default/objects/CventEvents__Log__c/fields/CventEvents__Scope__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__Scope__c</fullName>
    <description>Use to indicate the area that the event refers to, such as the related field or fields or the JSON path.</description>
    <inlineHelpText>Use to indicate the area that the event refers to, such as the related field or fields or the JSON path.</inlineHelpText>
    <label>Scope</label>
    <length>255</length>
    <type>Text</type>
</CustomField>