force-app/main/default/objects/CventEvents__Log__c/fields/CventEvents__ScopeType__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__ScopeType__c</fullName>
    <description>The type of object that the scope refers to.</description>
    <inlineHelpText>The type of object that the scope refers to.</inlineHelpText>
    <label>Scope Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>