force-app/main/default/objects/CventEvents__Log__c/fields/CventEvents__Source__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__Source__c</fullName>
    <description>Indicates the class, function, page, or other component where the event originated.</description>
    <inlineHelpText>Indicates the class, function, page, or other component where the event originated.</inlineHelpText>
    <label>Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>