force-app/main/default/objects/CventEvents__Log__c/listViews/CventEvents__All.listView-meta.xml
<ListView>
    <fullName>CventEvents__All</fullName>
    <columns>NAME</columns>
    <columns>CventEvents__LogDate__c</columns>
    <columns>CventEvents__Level__c</columns>
    <columns>CventEvents__Severity__c</columns>
    <columns>CventEvents__Message__c</columns>
    <columns>CventEvents__ResultType__c</columns>
    <columns>CventEvents__Status__c</columns>
    <columns>CventEvents__Source__c</columns>
    <columns>CventEvents__Code__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>