force-app/main/default/objects/CventEvents__Log__c/listViews/CventEvents__RecentLogs.listView-meta.xml
<ListView>
    <fullName>CventEvents__RecentLogs</fullName>
    <columns>NAME</columns>
    <columns>CventEvents__LogDate__c</columns>
    <columns>CventEvents__Level__c</columns>
    <columns>CventEvents__Severity__c</columns>
    <columns>CventEvents__Message__c</columns>
    <columns>CventEvents__ResultType__c</columns>
    <columns>CventEvents__Status__c</columns>
    <columns>CventEvents__Source__c</columns>
    <columns>CventEvents__Code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>YESTERDAY</value>
    </filters>
    <label>Recent</label>
</ListView>